--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,13 @@ double = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.72"
 cfg-if = "1.0.0"
 clap = { version = "4.3.19", features = ["derive"] }
 cpal = { version = "0.15.2", features = ["jack"] }
 derive_more = "0.99.17"
-dyn-clone = "1.0.12"
-eframe = "0.22.0"
+eframe = "0.22"
+env_logger = "0.10.0"
+log = "0.4.19"
 nom = "7.1.3"
 petgraph = "0.6.3"
 rustc-hash = "1.1.0"
