--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "papr"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = ["papr-proc-macro"]
+
+
 [features]
 default = ["double"]
 double = []
@@ -10,6 +14,7 @@ double = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+papr-proc-macro = { path = "./papr-proc-macro" }
 cfg-if = "1.0.0"
 clap = { version = "4.3.19", features = ["derive"] }
 cpal = { version = "0.15.2", features = ["jack"] }
