--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ nom = "7.1.3"
 petgraph = "0.6.3"
 rustc-hash = "1.1.0"
 tokio = { version = "1.29.1", features = ["full"] }
+rayon = "1.7.0"
+
+[profile.release]
+debug = true
