--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,6 @@ log = "0.4.19"
 nom = "7.1.3"
 petgraph = "0.6.3"
 tokio = { version = "1.29.1", features = ["full"] }
-rayon = "1.7.0"
 
 [profile.release]
-# debug = true
+debug = true
