--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,10 @@ log = "0.4.19"
 nom = "7.1.3"
 petgraph = "0.6.3"
 tokio = { version = "1.29.1", features = ["full"] }
+rosc = "0.10.1"
+midly = "0.5.3"
+midir = "0.9.1"
+crossbeam-channel = "0.5.8"
 
 [profile.release]
 debug = true
