- COMPLETELY new parser from scratch - new overhauled syntax

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,9 @@
             "env": {
                 "RUST_LOG": "papr=trace"
             },
-            "args": [],
+            "args": [
+                "test-scripts/syntax2.papr"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
