--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ lazy_static = "1.4.0"
 spin = { version = "0.9.8", features = ["std"] }
 rfd = { version = "0.11.4", default-features = false, features = ["xdg-portal"] }
 syntect = { version = "5.1.0", features = ["default-fancy"] }
+creak = "0.3.0"
 
 [profile.release]
 # debug = true
