--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ cfg-if = "1.0.0"
 clap = { version = "4.3.19", features = ["derive"] }
 cpal = { version = "0.15.2", features = ["jack"] }
 derive_more = "0.99.17"
-eframe = "0.22"
+eframe = "0.21"
 env_logger = "0.10.0"
 log = "0.4.19"
 nom = "7.1.3"
@@ -31,7 +31,9 @@ midir = "0.9.1"
 crossbeam-channel = "0.5.8"
 lazy_static = "1.4.0"
 spin = { version = "0.9.8", features = ["std"] }
-rfd = { version = "0.11.4", default-features = false, features = ["xdg-portal"] }
+rfd = { version = "0.11.4", default-features = false, features = [
+    "xdg-portal",
+] }
 syntect = { version = "5.1.0", features = ["default-fancy"] }
 creak = "0.3.0"
 
