so i rewrote the parser again...

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
                 "RUST_LOG": "papr=trace"
             },
             "args": [
-                "test-scripts/syntax2.papr"
+                "test-scripts/test4.papr"
             ],
             "cwd": "${workspaceFolder}"
         },
