--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,12 @@ double = []
 papr-proc-macro = { path = "./papr-proc-macro" }
 cfg-if = "1.0.0"
 clap = { version = "4.3.19", features = ["derive"] }
-cpal = { version = "0.15.2", features = ["jack"] }
+cpal = { git = "https://github.com/RustAudio/cpal.git", features = [
+    "jack",
+    "asio",
+] }
 derive_more = "0.99.17"
-eframe = "0.19"
-env_logger = "0.10.0"
+eframe = "0.22"
 log = "0.4.19"
 nom = "7.1.3"
 petgraph = "0.6.3"
@@ -52,7 +54,7 @@ miette = { version = "5.10.0", features = ["fancy"] }
 thiserror = "1.0.46"
 pest = "2.7.2"
 pest_derive = { version = "2.7.2", features = ["grammar-extras"] }
-
+simple_logger = "4.2.0"
 
 [profile.release]
 # debug = true
